# GameServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Server.cc  Server.cpp  main.cc
client/: client.cc  protobuf_processor.hpp  session.hpp
config/: config.ini
db/: CMakeLists.txt  DBConnectionPool.cc  DBConnectionPool.cpp  DBConnectionPool.h  DBHelp.cpp  DBHelp.h  Exception.h  db_connection_pool.cc  db_connection_pool.h  db_help.cc  db_help.h
db/lib/: libmysqlcppconn.so.7.1.1.9
include/mysql/: my_config.h
lib/windows/protobuf/Debug/: libprotobuf-lited.lib  libprotocd.lib
lib/windows/protobuf/Release/: libprotobuf-lite.lib  libprotoc.lib
module/: CMakeLists.txt  ModuleInterface.h  ModuleManager.h  imodule.hpp  module_mgr.hpp
module/room/: card_room.cc  card_room.h  poker_utils.cc  poker_utils.h  room_mgr.cc  room_mgr.h  seat.cc  seat.h
module/user/: UserMgr.h  user_dao.cc  user_dao.h  user_mgr.cc  user_mgr.h
msg/: BaseMsg.proto  CMakeLists.txt  event_processor.hpp  imessage_center.hpp  message_center.hpp  module_message_processor.hpp  protobuf_agent.hpp  protobuf_define.hpp  protobuf_processor.hpp  timer_processor.hpp
msg/proto/: base.proto  room.proto  user.proto
net/: CMakeLists.txt  isender.hpp  service.cc  service.h  session.hpp  session_factory.hpp  session_manager.hpp
net/znet/: epollnet.hpp  msgqueue.hpp  sendbuffer.hpp  spscqueue.hpp  znet.hpp
net/znet/pool/: AtomicIntrusiveLinkedList.h  AtomicLinkedList.h  object_pool.hpp  utils.hpp
protobuf/: protoc
protobuf/include/google/protobuf/.deps/: any.Plo  any.pb.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_message_reflection.Plo  generated_message_table_driven.Plo  generated_message_table_driven_lite.Plo  generated_message_util.Plo  map_field.Plo  message.Plo  message_lite.Plo  reflection_ops.Plo  repeated_field.Plo  service.Plo  source_context.pb.Plo  struct.pb.Plo  text_format.Plo  timestamp.pb.Plo  type.pb.Plo  unknown_field_set.Plo  wire_format.Plo  wire_format_lite.Plo  wrappers.pb.Plo
protobuf/include/google/protobuf/compiler/.deps/: code_generator.Plo  command_line_interface.Plo  importer.Plo  main.Po  parser.Plo  plugin.Plo  plugin.pb.Plo  subprocess.Plo  zip_writer.Plo
protobuf/include/google/protobuf/compiler/cpp/.deps/: cpp_enum.Plo  cpp_enum_field.Plo  cpp_extension.Plo  cpp_field.Plo  cpp_file.Plo  cpp_generator.Plo  cpp_helpers.Plo  cpp_map_field.Plo  cpp_message.Plo  cpp_message_field.Plo  cpp_padding_optimizer.Plo  cpp_primitive_field.Plo  cpp_service.Plo  cpp_string_field.Plo
protobuf/include/google/protobuf/compiler/csharp/.deps/: csharp_doc_comment.Plo  csharp_enum.Plo  csharp_enum_field.Plo  csharp_field_base.Plo  csharp_generator.Plo  csharp_helpers.Plo  csharp_map_field.Plo  csharp_message.Plo  csharp_message_field.Plo  csharp_primitive_field.Plo  csharp_reflection_class.Plo  csharp_repeated_enum_field.Plo  csharp_repeated_message_field.Plo  csharp_repeated_primitive_field.Plo  csharp_source_generator_base.Plo  csharp_wrapper_field.Plo
protobuf/include/google/protobuf/compiler/java/.deps/: java_context.Plo  java_doc_comment.Plo  java_enum.Plo  java_enum_field.Plo  java_enum_field_lite.Plo  java_enum_lite.Plo  java_extension.Plo  java_extension_lite.Plo  java_field.Plo  java_file.Plo  java_generator.Plo  java_generator_factory.Plo  java_helpers.Plo  java_lazy_message_field.Plo  java_lazy_message_field_lite.Plo  java_map_field.Plo  java_map_field_lite.Plo  java_message.Plo  java_message_builder.Plo  java_message_builder_lite.Plo  java_message_field.Plo  java_message_field_lite.Plo  java_message_lite.Plo  java_name_resolver.Plo  java_primitive_field.Plo  java_primitive_field_lite.Plo  java_service.Plo  java_shared_code_generator.Plo  java_string_field.Plo  (+1 more)
protobuf/include/google/protobuf/io/.deps/: coded_stream.Plo  gzip_stream.Plo  printer.Plo  strtod.Plo  tokenizer.Plo  zero_copy_stream.Plo  zero_copy_stream_impl.Plo  zero_copy_stream_impl_lite.Plo
protobuf/include/google/protobuf/stubs/.deps/: atomicops_internals_x86_gcc.Plo  atomicops_internals_x86_msvc.Plo  bytestream.Plo  common.Plo  int128.Plo  mathlimits.Plo  once.Plo  status.Plo  statusor.Plo  stringpiece.Plo  stringprintf.Plo  structurally_valid.Plo  strutil.Plo  substitute.Plo  time.Plo
protobuf/include/google/protobuf/util/.deps/: delimited_message_util.Plo  field_comparator.Plo  field_mask_util.Plo  json_util.Plo  message_differencer.Plo  time_util.Plo  type_resolver_util.Plo
protobuf/lib/: libprotobuf-lite.so.15.0.1  lt-protoc
protocol/: CMakeLists.txt  Protocol.cpp  Protocol.h  protobuf.hpp
socket/: CMakeLists.txt  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  GameSocket.cpp  GameSocket.h  GameSocketException.h  GameSocketSet.h  GameSocketType.h  ListeningManager.cpp  ListeningManager.h  Protocol.h  SocketLib.h
sql/: message.sql  table.sql  user.sql
src/core/: CMakeLists.txt  Context.cpp  Context.h  main.cpp
src/core/config/: Config.cpp  Config.h  ConfigMgr.cpp  ConfigMgr.h
src/core/db/: DBConnectionPool.cpp  DBConnectionPool.h  DBHelper.cpp  DBHelper.h
src/core/log/: Logger.cpp  Logger.h
src/core/module/: ModuleMgr.cpp  ModuleMgr.h
src/core/msg/: MsgMgr.cpp  MsgMgr.h  MsgQueue.hpp
src/core/net/: Code.hpp  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h
src/core/timer/: TimerQueue.cpp  TimerQueue.h
src/interface/: IContext.h  IDB.h  IModule.h  IMsgMgr.h  ITimer.h
src/module/: CMakeLists.txt
src/module/GroupMessageCollect/: CMakeLists.txt  GroupMessageCollect.cpp  GroupMessageCollect.h  main.cpp
src/proto/: gen.bat  message.pb.cc  message.pb.h  message.proto
src/public/: ByteBuffer.hpp  Tools.hpp
timer/: CMakeLists.txt  false  itimer.hpp  main.cc  timer_queue.cc  timer_queue.h
tools/: CMakeLists.txt  FileUtils.h  GameLog.cpp  GameLog.h  config_manager.cc  config_manager.h  file_utils.hpp  game_log.cc  game_log.h  string_utils.cpp  string_utils.h
(+42 files in other folders)
